# flood

./: .clang-format  .gitignore  CMakeLists.txt  README.md  expect.txt  in.fl  temp.py  test.py  test.sh
.VSCodeCounter/2025-04-26_18-52-08/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
foreign/: listobj_foreign.cc  listobj_foreign.h
libflood/: arena.cc  arena.h  common.h  dynarr.h  string.h  templates.h
snapshots/misc/: factorial.out  filter.out  map.out
src/: api.c  api.h  arena.c  arena.cc  arena.h  ast.c  ast.cc  ast.h  chunk.c  chunk.cc  chunk.h  common.h  compile.c  compile.cc  compile.h  compiler.c  compiler.h  debug.c  debug.cc  debug.h  dynarr.h  error.c  error.cc  error.h  fl_string.h  foreign.c  foreign.cc  foreign.h  gc.c  gc.cc  gc.h  main.c  main.cc  memory.c  memory.h  object.c  object.cc  object.h  parse.c  parse.cc  (+27 more)
test/: in.fl  in.txt  test.txt  test2.txt
test/bench/: sudoku.fl
test/block/: block.fl  extra_semi.fl  nested_block.fl
test/comment/: comment.fl
test/fn_call/: no_comma.fl  no_r_paren.fl
test/fn_decl/: multi_arg.fl  no_colon.fl  no_l_paren.fl
test/fn_runtime/: factorial.fl  fib.fl  gcd.fl
test/if/: dangling_else.fl  if.fl  if_missing_l_paren.fl  if_missing_r_paren.fl  if_simple.fl  nonbool_cond.fl
test/list/: idx.fl
test/misc/: insertion_sort.fl  map.fl
test/old/: test10.txt  test11.txt  test13.txt  test14.txt  test16.txt  test2.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
test/operator/: add_assign.fl  add_assign_nonnum_num.fl  add_assign_num_nonnum.fl  add_nonnum_num.fl  and.fl  gt.fl  (+47 more)
util/: arena.c  arena.h  memory.c  memory.h
(+310 files in other folders)
